@@ -42,8 +42,7 @@ class LockableItem(EtagSupport):
     security.declarePrivate('wl_lockmapping')
     security.declarePublic('wl_isLocked', 'wl_getLock', 'wl_isLockedByUser',
                            'wl_lockItems', 'wl_lockValues', 'wl_lockTokens',)
-    security.declareProtected('WebDAV Lock items',
-                              'wl_grantLockToUser', 'wl_setLock')
+    security.declareProtected('WebDAV Lock items', 'wl_setLock')
     security.declareProtected('WebDAV Unlock items', 'wl_delLock')
     security.declareProtected('Manage WebDAV Locks', 'wl_clearLocks')
 
